# scorecard-python

./: .fernignore  .gitignore  main.py  pyproject.toml  reference.md
.github/workflows/: ci.yml
src/scorecard/: __init__.py  api_key.py  client.py  environment.py  run_all_tests.py  run_manager.py  telemetry.py
src/scorecard/core/: client_wrapper.py
src/scorecard/resources/run/: client.py
src/scorecard/resources/score/: client.py
src/scorecard/resources/testcase/: client.py
src/scorecard/resources/testrecord/: client.py
src/scorecard/resources/testset/: client.py
src/scorecard/testset/: client.py
src/scorecard/types/: __init__.py  custom_schema.py  custom_variable.py  file_url.py  grade.py  json_object.py  not_found_error_body.py  paginated_testcase_response.py  run.py  test_case.py  test_case_create.py  testrecord.py  testset.py  unauthenticated_error.py  unauthorized_error_body.py
src/tracer/: README.md  __init__.py  database.py  doc.md  log_object.py  main.py  patcher.py  pusher.py  pyproject.toml  tracer.py
src/tracer/tracer/: __init__.py  database.py  log_object.py  patcher.py  pusher.py  tracer.py
tests/: test_client.py  test_run_manager.py  tracer_main.py
tests/api/: test_testset.py
